--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                     <h1 class="font-pixel text-3xl md:text-5xl mb-4 text-light-primary dark:text-dark-primary">Teli Games</h1>
                     <p class="text-lg md:text-xl max-w-2xl mx-auto">
-                        Probably making your next favorite game. Or at least, a game you'll tell your friends is "pretty neat."
+                        Probably making your next favourite game. Or at least, a game you'll tell your friends is "pretty neat."
                     </p>
                 </div>
             </section>
@@ -102,7 +102,7 @@
                             Founded by two friends who decided making games was slightly more fun than their day jobs. One of us is good at art, the other one *thinks* they're good at code. We'll let you decide which is which.
                         </p>
                         <p class="text-lg">
-                            Our philosophy is simple: create cozy, charming games that feel like a warm hug on a rainy day. Also, games with questionable physics engines because that's just funny. We're powered by coffee, questionable life choices, and the sheer belief that someone out there wants to play a game about a sentient turnip accountant.
+                            Our philosophy is simple: create cozy, charming games that feel like a warm hug on a rainy day. Also, games with questionable physics engines because that's just funny. We're powered by caffiene, questionable life choices, and the sheer belief that someone out there wants to play a game about a sentient turnip (if we ever make that).
                         </p>
                     </div>
                 </div>
