--- a/project-pastel/index.html
+++ b/project-pastel/index.html
@@ -60,6 +60,7 @@
                 <div class="flex items-center space-x-4">
                     <a href="https://www.teli.games/#games" class="hidden md:block hover:text-light-primary dark:hover:text-dark-primary font-semibold">Games</a>
                     <a href="https://www.teli.games/#about" class="hidden md:block hover:text-light-primary dark:hover:text-dark-primary font-semibold">About</a>
+                    <a href="https://www.teli.games/#launcher" class="hidden md:block hover:text-light-primary dark:hover:text-dark-primary font-semibold">Launcher</a>
                     <button id="theme-toggle" class="p-2 rounded-full bg-light-secondary dark:bg-dark-secondary pixel-shadow-sm hover:scale-110 transition-transform">
                         <svg id="theme-toggle-light-icon" class="w-5 h-5 text-light-accent" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
                         <svg id="theme-toggle-dark-icon" class="w-5 h-5 text-dark-accent hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
